--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-prospector = "*"
+autopep8 = "*"
 
 [packages]
 django = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.7"
